--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,3 +15,47 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
 }
+@import "tailwindcss";
+
+:root {
+  --primary-color: #002D6B;
+  --secondary-color: #007BFF;
+  --action-color: #FFA500;
+  --text-color: #ffffff;
+  --text-secondary: #333333;
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+  
+
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.layoutMain {
+  background: var(--primary-color);
+  color: var(--text-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  gap: 5;
+  height: 100vh;
+  width: 100%;
+  padding-bottom: 6rem;
+}
+.action-color {
+  color : var(--action-color);
+}
+.primary-color {
+  color: var(--primary-color);
+}
+.secondary-color {
+  color: var(--secondary-color);
+}
