logic for login is done

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,18 +4,18 @@
 @tailwind components;
 @tailwind utilities;
 
-/* PrimeReact */
+/* PrimeReact 34
 @import 'primereact/resources/themes/lara-light-indigo/theme.css';
 @import 'primereact/resources/primereact.min.css';
 @import 'primeicons/primeicons.css';
 /* Ton CSS perso */
+@import "tailwindcss";
 body {
   background-color: #002D6B;
   color: #fff;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
 }
-@import "tailwindcss";
 
 :root {
   --primary-color: #002D6B;
